[package]
name = "agnostic-levenshtein"
version = "0.1.3"
edition = "2024"
authors = ["Theo Beers <theo.beers@drexel.edu>"]
description = "Levenshtein distance for ASCII or Unicode strings"
license = "MIT"
repository = "https://github.com/theodore-s-beers/agnostic-levenshtein"
keywords = ["edit-distance", "levenshtein"]
categories = ["algorithms", "internationalization", "text-processing"]
